--- a/mysite2/isi/templates/berita/isiberita.html
+++ b/mysite2/isi/templates/berita/isiberita.html
@@ -23,7 +23,8 @@
   </div>
 </div>
 
-<br><br>
+<br>
+<br>
 
     <p style="padding-left: 180px; margin-bottom: 0; color: grey; margin-top: 50px;">Internasional news</p>
 <h1 style="padding-left: 180px; padding-top: 0px; font-weight: bold;">Sejarah konflik Palestina-Israel, <br> pertikaian berkepanjangan <br> yang berlangsung puluhan tahun</h1>
@@ -168,6 +169,15 @@ style="padding-left: 180px; padding-top: 20px;">
          Bangsa-Bangsa yang baru dibentuk pada 1922. Organisasi ini adalah cikal bakal <br>
           Perserikatan Bangsa Bangsa (PBB) .</p>
 
+      <h6 style="padding-left: 180px; padding-top: 0px; font-weight: bold;">Baca juga:</h6>
+
+      <ul style="padding-left: 210px; padding-top: 0px;">
+        <br>
+        <li><a href=""></a></li>
+
+        <li><a href=""></a></li>
+      </ul>
+
       <p style="padding-left: 180px; padding-top: 0px;">Bagi orang-orang Yahudi, Palestina adalah rumah bagi leluhur mereka, namun <br>
          komunitas Arab di Palestina juga mengeklaim wilayah tersebut dan menentang klaim <br>
           sepihak komunitas Yahudi di sana.</p>
@@ -192,68 +202,82 @@ style="padding-left: 180px; padding-top: 20px;">
        
       <p style="padding-left: 180px; padding-top: 0px;">Rencana ini diterima oleh para pemimpin Yahudi, namun ditolak oleh pemimpin <br>
          Arab dan tak pernah diimplementasikan.</p>
+         
+      <br><br>
 
-
-
-
+         <h4 style="padding-left: 180px; padding-top: 0px; font-weight: bold;">Topik terkait</h4>
 
       <br>
-          <!-- Footer  -->
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <h6>About</h6>
-          <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
-        </div>
-     
 
-        <div class="col-xs-6 col-md-3">
-          <h6>Categories</h6>
-          <ul class="footer-links">
-            <li><a href="/trending">trending</a></li>
-            <li><a href="/olahraga">olahraga</a></li>
-            <li><a href="/politik">politik</a></li>
-            <li><a href="/gayahidup">gaya hidup</a></li>
-            <li><a href="/entertaiment">entertainment</a></li>
-            <li><a href="/kesehatan">kesehatan</a></li>
-          </ul>
-        </div>
-
-        <div class="col-xs-6 col-md-3">
-          <h6>Quick Links</h6>
-          <ul class="footer-links">
-            <li><a href="http://scanfcode.com/about/">About Us</a></li>
-            <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-            <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-            <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-            <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
-          </ul>
+      <div class="container text-center" style="padding-left: 95px; padding-top: 0px;">
+        <div class="row row-cols-auto">
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c06gq3yj3w3t'">Islam</div>
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c1gdq2kvnd0t'">Muslim</div>
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c2dwqj8n8kdt'">Israel-Palestina</div>
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c6vzy7r9k8gt'">Politik</div>
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c5qvpxjx17xt'">Amerika serikat</div>
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/cjgn7k1ww8jt'">Timur tengah</div>
         </div>
       </div>
-    </div>
 
-      <hr>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
-       <a href="#">Scanfcode</a>.
-          </p>
-        </div>
+      <br>
 
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
-          </ul>
+      <div class="container text-center" style="padding-left: 95px; padding-top: 0px;">
+        <div class="row row-cols-auto">
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/cpzd4kxw3xxt'">Dunia Arab</div>
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/cr50yk8618jt'">Israel</div>
+          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/cvjp25wxvjnt'">Palestina</div>
         </div>
       </div>
+
+      <br><br>
+
+<!-- Footer  -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">Cable News Network (CNN, "Jaringan Berita Kabel") adalah sebuah saluran berita kabel asal AS yang didirikan tahun 1980 oleh konglomerat media asal Amerika Serikat Ted Turner.[1][2] Ketika diluncurkan, CNN adalah saluran televisi pertama yang menyiarkan liputan berita 24 jam,[3] dan saluran televisi berita pertama di Amerika Serikat.[4] Meski memiliki banyak cabang, CNN justru lebih sering mengudara dari kantor pusatnya di CNN Center di Atlanta, 30 Hudson Yards di New York City, dan studio di Washington, D.C. dan Los Angeles. CNN dimiliki oleh perusahaan induknya, Warner Bros. Discovery.[5]</p>
+      </div>
+   
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Categories</h6>
+        <ul class="footer-links">
+          <li><a href="/trending">trending</a></li>
+          <li><a href="/olahraga">olahraga</a></li>
+          <li><a href="/politik">politik</a></li>
+          <li><a href="/gayahidup">gaya hidup</a></li>
+          <li><a href="/entertaimen">entertainment</a></li>
+          <li><a href="/kesehatan">kesehatan</a></li>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="https://www.cnnindonesia.com/">About Us</a></li>
+          <li><a href="https://github.com/IhsanNA">Contact Me</a></li>
+          <li><a href="https://github.com/IhsanNA">Contribute</a></li>
+          <li><a href="https://github.com/IhsanNA">Privacy Policy</a></li>
+          <li><a href="https://github.com/IhsanNA">Sitemap</a></li>
+        </ul>
+      </div>
     </div>
+  </div>
+
+    <hr>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
+     <a href="#">Scanfcode</a>.
+        </p>
+      </div>
+    </div>
+  </div>
 </footer>
-
     {% endblock %}
 </body>
 </html>
