--- a/mysite2/news/templates/menu/trending.html
+++ b/mysite2/news/templates/menu/trending.html
@@ -180,13 +180,14 @@
   </div>
 
   <br>
+
 <!-- Footer  -->
 <footer class="site-footer">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-6">
         <h6>About</h6>
-        <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+        <p class="text-justify">Cable News Network (CNN, "Jaringan Berita Kabel") adalah sebuah saluran berita kabel asal AS yang didirikan tahun 1980 oleh konglomerat media asal Amerika Serikat Ted Turner.[1][2] Ketika diluncurkan, CNN adalah saluran televisi pertama yang menyiarkan liputan berita 24 jam,[3] dan saluran televisi berita pertama di Amerika Serikat.[4] Meski memiliki banyak cabang, CNN justru lebih sering mengudara dari kantor pusatnya di CNN Center di Atlanta, 30 Hudson Yards di New York City, dan studio di Washington, D.C. dan Los Angeles. CNN dimiliki oleh perusahaan induknya, Warner Bros. Discovery.[5]</p>
       </div>
    
 
@@ -205,11 +206,11 @@
       <div class="col-xs-6 col-md-3">
         <h6>Quick Links</h6>
         <ul class="footer-links">
-          <li><a href="http://scanfcode.com/about/">About Us</a></li>
-          <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-          <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-          <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-          <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+          <li><a href="https://www.cnnindonesia.com/">About Us</a></li>
+          <li><a href="https://github.com/IhsanNA">Contact Me</a></li>
+          <li><a href="https://github.com/IhsanNA">Contribute</a></li>
+          <li><a href="https://github.com/IhsanNA">Privacy Policy</a></li>
+          <li><a href="https://github.com/IhsanNA">Sitemap</a></li>
         </ul>
       </div>
     </div>
@@ -224,21 +225,10 @@
         </p>
       </div>
 
-      <div class="col-md-4 col-sm-6 col-xs-12">
-        <ul class="social-icons">
-          <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
-        </ul>
-      </div>
+     
     </div>
   </div>
 </footer>
-
-<br>
-
-
     {% endblock %}
 </body>
 </html>
