--- a/mysite2/isi/templates/berita/isiberita.html
+++ b/mysite2/isi/templates/berita/isiberita.html
@@ -87,7 +87,7 @@ style="padding-left: 180px; padding-top: 20px;">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Siapa saja para pimpinan penting Hamas?</h5>
+              <h5 class="card-title"><a style="text-decoration: none; color: black;" href="https://www.bbc.com/indonesia/articles/cd15rrwpz0do">Siapa saja para pimpinan penting Hamas?</a></h5>
             </div>
           </div>
         </div>
@@ -171,11 +171,12 @@ style="padding-left: 180px; padding-top: 20px;">
 
       <h6 style="padding-left: 180px; padding-top: 0px; font-weight: bold;">Baca juga:</h6>
 
-      <ul style="padding-left: 210px; padding-top: 0px;">
+      <ul style="padding-left: 220px; padding-top: 0px;">
         <br>
-        <li><a href=""></a></li>
-
-        <li><a href=""></a></li>
+        <li><a href="https://www.bbc.com/indonesia/dunia-57054947">Palestina-Israel: Sejumlah fakta penting di balik sengketa yang sudah berusia 100 <br>
+        tahun</a></li>
+        
+        <li style="padding-top: 10px;"><a href="https://www.bbc.com/indonesia/dunia-54231688">Israel-Palestina: Garis perbatasan dalam peta dari masa ke masa</a></li>
       </ul>
 
       <p style="padding-left: 180px; padding-top: 0px;">Bagi orang-orang Yahudi, Palestina adalah rumah bagi leluhur mereka, namun <br>
@@ -211,12 +212,12 @@ style="padding-left: 180px; padding-top: 20px;">
 
       <div class="container text-center" style="padding-left: 95px; padding-top: 0px;">
         <div class="row row-cols-auto">
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c06gq3yj3w3t'">Islam</div>
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c1gdq2kvnd0t'">Muslim</div>
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c2dwqj8n8kdt'">Israel-Palestina</div>
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c6vzy7r9k8gt'">Politik</div>
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/c5qvpxjx17xt'">Amerika serikat</div>
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/cjgn7k1ww8jt'">Timur tengah</div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/c06gq3yj3w3t">Islam</a></div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/c1gdq2kvnd0t">Muslim</a></div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/c2dwqj8n8kdt">Israel-Palestina</a></div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/c6vzy7r9k8gt">Politik</a></div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/c5qvpxjx17xt">Amerika Serikat</a></div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/cjgn7k1ww8jt">Timur Tengah</a></div>
         </div>
       </div>
 
@@ -224,13 +225,15 @@ style="padding-left: 180px; padding-top: 20px;">
 
       <div class="container text-center" style="padding-left: 95px; padding-top: 0px;">
         <div class="row row-cols-auto">
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/cpzd4kxw3xxt'">Dunia Arab</div>
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/cr50yk8618jt'">Israel</div>
-          <div class="col" style="text-decoration-line: underline; color: grey;" onclick="location.href='https://www.bbc.com/indonesia/topics/cvjp25wxvjnt'">Palestina</div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/cpzd4kxw3xxt">Dunia Arab</a></div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/cr50yk8618jt">Israel</a></div>
+          <div class="col"><a href="https://www.bbc.com/indonesia/topics/cvjp25wxvjnt">Palestina</a></div>
         </div>
       </div>
 
       <br><br>
+      {% for Berita in beritas %}
+      {% endfor %}
 
 <!-- Footer  -->
 <footer class="site-footer">
