--- a/mysite2/core/templates/core/base.html
+++ b/mysite2/core/templates/core/base.html
@@ -22,6 +22,9 @@
                 <a class="nav-link active text-white" aria-current="page" href="/">Beranda</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link active text-white" aria-current="page" href="/all">All</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link active text-white" aria-current="page" href="/trending">Trending</a>
               </li>
               <li class="nav-item">
@@ -49,6 +52,8 @@
       </nav>
 
       {% block content %}
+
+      
  
       {% endblock %}
 
