--- a/mysite2/isi/templates/berita/isiberita.html
+++ b/mysite2/isi/templates/berita/isiberita.html
@@ -1,4 +1,4 @@
-
+{% extends 'core/base.html' %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,16 +23,15 @@
   </div>
 </div>
 
-<br>
-<br>
+<br><br>
 
-    <p style="padding-left: 180px; margin-bottom: 0; color: grey; margin-top: 50px;">Internasional news</p>
+<p style="padding-left: 180px; margin-bottom: 0; color: grey; margin-top: 50px;">Internasional news</p>
 <h1 style="padding-left: 180px; padding-top: 0px; font-weight: bold;">Sejarah konflik Palestina-Israel, <br> pertikaian berkepanjangan <br> yang berlangsung puluhan tahun</h1>
 <p style="padding-left: 180px;"> <span style="color: #0077b6;">cnn </span><span style="color: grey;">- Khazam alim - cnn indonesia</span></p>
-<br>
-<img src="https://ichef.bbci.co.uk/news/800/cpsprodpb/d765/live/e0ed0d20-719d-11ee-8e7d-652b30667635.png" alt=""
-style="padding-left: 180px; padding-top: 20px;">
 
+<br>
+
+<img src="https://ichef.bbci.co.uk/news/800/cpsprodpb/d765/live/e0ed0d20-719d-11ee-8e7d-652b30667635.png" alt="" style="padding-left: 180px; padding-top: 20px;">
 <p style="color: grey; padding-left: 180px; font-size: small; padding-top: 0;">24 Oktober 2023</p>
 <h5 style="padding-left: 180px; padding-top: 0px;" class="fw-bold">Kelompok milisi Palestina, Hamas, melancarkan serangan yang belum pernah <br> terjadi sebelumnya terhadap Israel pada 7 Oktober. Aksi itu dilakukan dengan <br>
      mengerahkan ratusan pasukan bersenjata yang menyusup ke lingkungan <br>
@@ -232,9 +231,6 @@ style="padding-left: 180px; padding-top: 20px;">
       </div>
 
       <br><br>
-      {% for Berita in beritas %}
-      {% endfor %}
-
 <!-- Footer  -->
 <footer class="site-footer">
   <div class="container">
