--- a/mysite2/news/templates/menu/isiberita.html
+++ b/mysite2/news/templates/menu/isiberita.html
@@ -27,7 +27,7 @@
 
 <p style="padding-left: 180px; margin-bottom: 0; color: grey; margin-top: 50px;">Internasional news</p>
 <h1 style="padding-left: 180px; padding-top: 0px; font-weight: bold;">{{beritas.judul}}</h1>
-<p style="padding-left: 180px;"> <span style="color: #0077b6;">cnn </span><span style="color: grey;">- Khazam alim - cnn indonesia</span></p>
+<p style="padding-left: 180px;"> <span style="color: #0077b6;">cnn </span><span style="color: grey;">- cnn indonesia</span></p>
 
 <br>
 
