--- a/mysite2/news/templates/menu/all.html
+++ b/mysite2/news/templates/menu/all.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}WELCOME{% endblock %}</title>
+    {% block htmlhead %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'index.css' %}">
+    {% endblock htmlhead %}
 </head>
 <body>
     {% block content %}
@@ -119,6 +123,55 @@
         {% endfor %}
     </div>
 </div>
+
+<!-- Footer  -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">Cable News Network (CNN, "Jaringan Berita Kabel") adalah sebuah saluran berita kabel asal AS yang didirikan tahun 1980 oleh konglomerat media asal Amerika Serikat Ted Turner.[1][2] Ketika diluncurkan, CNN adalah saluran televisi pertama yang menyiarkan liputan berita 24 jam,[3] dan saluran televisi berita pertama di Amerika Serikat.[4] Meski memiliki banyak cabang, CNN justru lebih sering mengudara dari kantor pusatnya di CNN Center di Atlanta, 30 Hudson Yards di New York City, dan studio di Washington, D.C. dan Los Angeles. CNN dimiliki oleh perusahaan induknya, Warner Bros. Discovery.[5]</p>
+      </div>
+   
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Categories</h6>
+        <ul class="footer-links">
+          <li><a href="/trending">trending</a></li>
+          <li><a href="/olahraga">olahraga</a></li>
+          <li><a href="/politik">politik</a></li>
+          <li><a href="/gayahidup">gaya hidup</a></li>
+          <li><a href="/entertaimen">entertainment</a></li>
+          <li><a href="/kesehatan">kesehatan</a></li>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="https://www.cnnindonesia.com/">About Us</a></li>
+          <li><a href="https://github.com/IhsanNA">Contact Me</a></li>
+          <li><a href="https://github.com/IhsanNA">Contribute</a></li>
+          <li><a href="https://github.com/IhsanNA">Privacy Policy</a></li>
+          <li><a href="https://github.com/IhsanNA">Sitemap</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+    <hr>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
+     <a href="#">Scanfcode</a>.
+        </p>
+      </div>
+
+     
+    </div>
+  </div>
+</footer>
    
 
     {% endblock %}
